// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DastSiteProfileSummary renders properly profile 0 1`] = `
<div>
  <div
    class="row"
  >
    <profile-selector-summary-cell-stub
      class=""
      label="Target URL"
      value="http://example5.test"
    />
     
    <profile-selector-summary-cell-stub
      label="Site type"
      value="Website"
    />
  </div>
   
  <div
    class="row"
  >
    <profile-selector-summary-cell-stub
      label="Authentication URL"
      value="http://example5.test/sign-in"
    />
  </div>
   
  <div
    class="row"
  >
    <profile-selector-summary-cell-stub
      label="Username"
      value="validation-pending@example.com"
    />
     
    <profile-selector-summary-cell-stub
      label="Password"
      value="••••••••"
    />
  </div>
   
  <div
    class="row"
  >
    <profile-selector-summary-cell-stub
      label="Username form field"
      value="session[username]"
    />
     
    <profile-selector-summary-cell-stub
      label="Password form field"
      value="session[password]"
    />
  </div>
   
  <div
    class="row"
  >
    <profile-selector-summary-cell-stub
      label="Excluded URLs"
      value="http://example5.test/sign-out,http://example5.test/hidden"
    />
     
    <profile-selector-summary-cell-stub
      label="Request headers"
      value="None"
    />
  </div>
   
  <div
    class="row"
  >
    <profile-selector-summary-cell-stub
      label="Validation status"
      value="Not Validated"
    />
  </div>
</div>
`;

exports[`DastSiteProfileSummary renders properly profile 1 1`] = `
<div>
  <div
    class="row"
  >
    <profile-selector-summary-cell-stub
      class=""
      label="Target URL"
      value="http://example6.test"
    />
     
    <profile-selector-summary-cell-stub
      label="Site type"
      value="Website"
    />
  </div>
   
  <div
    class="row"
  >
    <profile-selector-summary-cell-stub
      label="Authentication URL"
      value="http://example6.test/sign-in"
    />
  </div>
   
  <div
    class="row"
  >
    <profile-selector-summary-cell-stub
      label="Username"
      value="validation-in-progress@example.com"
    />
     
    <profile-selector-summary-cell-stub
      label="Password"
      value="••••••••"
    />
  </div>
   
  <div
    class="row"
  >
    <profile-selector-summary-cell-stub
      label="Username form field"
      value="session[username]"
    />
     
    <profile-selector-summary-cell-stub
      label="Password form field"
      value="session[password]"
    />
  </div>
   
  <div
    class="row"
  >
    <profile-selector-summary-cell-stub
      label="Excluded URLs"
      value="http://example6.test/sign-out,http://example6.test/hidden"
    />
     
    <profile-selector-summary-cell-stub
      label="Request headers"
      value="None"
    />
  </div>
   
  <div
    class="row"
  >
    <profile-selector-summary-cell-stub
      label="Validation status"
      value="Not Validated"
    />
  </div>
</div>
`;

exports[`DastSiteProfileSummary renders properly profile 2 1`] = `
<div>
  <div
    class="row"
  >
    <profile-selector-summary-cell-stub
      class=""
      label="Target URL"
      value="http://example7.test"
    />
     
    <profile-selector-summary-cell-stub
      label="Site type"
      value="Website"
    />
  </div>
   
  <div
    class="row"
  >
    <profile-selector-summary-cell-stub
      label="Authentication URL"
      value="http://example7.test/sign-in"
    />
  </div>
   
  <div
    class="row"
  >
    <profile-selector-summary-cell-stub
      label="Username"
      value="validation-passed@example.com"
    />
     
    <profile-selector-summary-cell-stub
      label="Password"
      value="••••••••"
    />
  </div>
   
  <div
    class="row"
  >
    <profile-selector-summary-cell-stub
      label="Username form field"
      value="session[username]"
    />
     
    <profile-selector-summary-cell-stub
      label="Password form field"
      value="session[password]"
    />
  </div>
   
  <div
    class="row"
  >
    <profile-selector-summary-cell-stub
      label="Excluded URLs"
      value="http://example7.test/sign-out,http://example7.test/hidden"
    />
     
    <profile-selector-summary-cell-stub
      label="Request headers"
      value="None"
    />
  </div>
   
  <div
    class="row"
  >
    <profile-selector-summary-cell-stub
      label="Validation status"
      value="Validated"
    />
  </div>
</div>
`;

exports[`DastSiteProfileSummary renders properly profile 3 1`] = `
<div>
  <div
    class="row"
  >
    <profile-selector-summary-cell-stub
      class=""
      label="Target URL"
      value="http://example8.test"
    />
     
    <profile-selector-summary-cell-stub
      label="Site type"
      value="Website"
    />
  </div>
   
  <div
    class="row"
  >
    <profile-selector-summary-cell-stub
      label="Authentication URL"
      value="http://example8.test/sign-in"
    />
  </div>
   
  <div
    class="row"
  >
    <profile-selector-summary-cell-stub
      label="Username"
      value="validation-failed@example.com"
    />
     
    <profile-selector-summary-cell-stub
      label="Password"
      value="••••••••"
    />
  </div>
   
  <div
    class="row"
  >
    <profile-selector-summary-cell-stub
      label="Username form field"
      value="session[username]"
    />
     
    <profile-selector-summary-cell-stub
      label="Password form field"
      value="session[password]"
    />
  </div>
   
  <div
    class="row"
  >
    <profile-selector-summary-cell-stub
      label="Excluded URLs"
      value="http://example8.test/sign-out,http://example8.test/hidden"
    />
     
    <profile-selector-summary-cell-stub
      label="Request headers"
      value="None"
    />
  </div>
   
  <div
    class="row"
  >
    <profile-selector-summary-cell-stub
      label="Validation status"
      value="Not Validated"
    />
  </div>
</div>
`;

exports[`DastSiteProfileSummary renders properly profile 4 1`] = `
<div>
  <div
    class="row"
  >
    <profile-selector-summary-cell-stub
      class=""
      label="Target URL"
      value="http://example9.test"
    />
     
    <profile-selector-summary-cell-stub
      label="Site type"
      value="Website"
    />
  </div>
   
  <div
    class="row"
  >
    <profile-selector-summary-cell-stub
      label="Authentication URL"
      value="http://example9.test/sign-in"
    />
  </div>
   
  <div
    class="row"
  >
    <profile-selector-summary-cell-stub
      label="Username"
      value="non-validated@example.com"
    />
     
    <profile-selector-summary-cell-stub
      label="Password"
      value="••••••••"
    />
  </div>
   
  <div
    class="row"
  >
    <profile-selector-summary-cell-stub
      label="Username form field"
      value="session[username]"
    />
     
    <profile-selector-summary-cell-stub
      label="Password form field"
      value="session[password]"
    />
  </div>
   
  <div
    class="row"
  >
    <profile-selector-summary-cell-stub
      label="Excluded URLs"
      value="http://example9.test/sign-out,http://example9.test/hidden"
    />
     
    <profile-selector-summary-cell-stub
      label="Request headers"
      value="None"
    />
  </div>
   
  <div
    class="row"
  >
    <profile-selector-summary-cell-stub
      label="Validation status"
      value="Not Validated"
    />
  </div>
</div>
`;
